--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" href="./img/favicon/favicon.png">
 
     <link rel="stylesheet" href="./css/index.min.css">
+    <script type="module" src="./services.json"></script>
     <script src="./index.js" type="module" defer></script>
 
     <title>Dust Busters</title>
