--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/png" href="./img/favicon/favicon.png">
 
     <link rel="stylesheet" href="./css/index.min.css">
-    <script type="module" src="./services.json"></script>
-    <script src="./index.js" type="module" defer></script>
+    <script src="./services.json"></script>
+    <script src="./index.js" defer></script>
 
     <title>Dust Busters</title>
 </head>
